# mandali

./: .gitignore  DecisionsTracker.md  LICENSE  PRIOR_ART.md  README.md  config.yaml  mandali.py  pyproject.toml  requirements.txt  teams_bridge.py
.github/workflows/: release.yml
personas/: dev.persona.md  pm.persona.md  qa.persona.md  security.persona.md  sre.persona.md
relay/: app.py  bot_handler.py  config.py  requirements.txt  startup.sh  utils.py  ws_manager.py
